day code moi nhat

--- a/Admin/View/admin.html
+++ b/Admin/View/admin.html
@@ -168,7 +168,7 @@
                     </div>
                     <!-- Modal footer -->
                     <div class="modal-footer">
-                        <button onclick="addProducts()" class="btn btn-success">Add Product</button>
+                        <!-- <button onclick="addProducts()" class="btn btn-success">Add Product</button> -->
                     </div>
                 </div>
             </div>
@@ -185,14 +185,17 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
+
     <script src="https://code.highcharts.com/highcharts.js"></script>
     <script src="https://code.highcharts.com/modules/series-label.js"></script>
     <script src="https://code.highcharts.com/modules/exporting.js"></script>
 
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script src="./services/SanPhamService.js"></script>
-    <script src="./models/SanPham.js"></script>
-    <!-- controler js -->
+    
+
+    
+    <script src="../models/SanPham.js"></script>
+    <script src="../services/SanPhamServices.js"></script>
     <script src="../Controller/Ad.js"></script>
 </body>
 
