--- a/Admin/View/admin.html
+++ b/Admin/View/admin.html
@@ -17,7 +17,7 @@
 <body>
     <div class="container">
         <nav class="navbar navbar-expand-sm navbar-dark bg-primary">
-            <a class="navbar-brand" href="#">Navbar</a>
+            <a class="navbar-brand" href="#">QPhone</a>
             <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse"
                 data-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false"
                 aria-label="Toggle navigation"></button>
@@ -27,22 +27,14 @@
                         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-toggle="dropdown"
-                            aria-haspopup="true" aria-expanded="false">Dropdown</a>
-                        <div class="dropdown-menu" aria-labelledby="dropdownId">
-                            <a class="dropdown-item" href="#">Action 1</a>
-                            <a class="dropdown-item" href="#">Action 2</a>
-                        </div>
+                        <a class="nav-link" href="#">Settings</a>
                     </li>
                 </ul>
             </div>
         </nav>
 
         <header class="display-4 my-4">
-            Welcome to Admin CP
+            Welcome to Admin QPhone
         </header>
         <!-- Phan tab menu -->
         <ul class="nav nav-tabs" role="tablist">
